--- a/gb/21/10/29/n13338374.md
+++ b/gb/21/10/29/n13338374.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dfsljb317/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/dfsljb317/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/dfsljb317/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dfsljb317/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/dfsljb317/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dfsljb317/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/dfsljb317/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dfsljb317/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/dfsljb317/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dfsljb317/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/dfsljb317/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dfsljb317/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/dfsljb317/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dfsljb317/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/dfsljb317/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dfsljb317/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/dfsljb317/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/dfsljb317/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/dfsljb317/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/dfsljb317/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dfsljb317/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/dfsljb317/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dfsljb317/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/dfsljb317/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dfsljb317/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dfsljb317/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dfsljb317/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dfsljb317/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dfsljb317/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dfsljb317/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dfsljb317/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dfsljb317/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/dfsljb317/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/dfsljb317/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dfsljb317/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dfsljb317/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dfsljb317/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dfsljb317/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dfsljb317/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dfsljb317/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dfsljb317/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dfsljb317/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dfsljb317/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/dfsljb317/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dfsljb317/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dfsljb317/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dfsljb317/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>2021嘉市购物节11月1日盛妆在掌声中登场</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/10/id13338376-524620-600x400.jpeg" />
 <h6>	2021嘉义市购物节将于11月1日正式起跑，启动仪式。（嘉义市政府提供）
 </h6>
 <hr>
-<p>【大纪元2021年10月29日讯】（大纪元记者李撷璎台湾嘉义报导）关怀社会的“2021嘉义市<ahref="https://github.com/dfsljb317/djy/blob/master/gb/tag/%E8%B4%AD%E7%89%A9%E8%8A%82.md#1">购物节</a>”将于11月1日正式展开，活动一直持续到明年黄历2月6日止。嘉义市民刚领到热腾腾的消费金2000元红包，就可以累积活动期间的发票参加购物节抽VOLVO? V60的活动。</p>
+<p>【大纪元2021年10月29日讯】（大纪元记者李撷璎台湾嘉义报导）关怀社会的“2021嘉义市<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B4%AD%E7%89%A9%E8%8A%82.md#1">购物节</a>”将于11月1日正式展开，活动一直持续到明年黄历2月6日止。嘉义市民刚领到热腾腾的消费金2000元红包，就可以累积活动期间的发票参加购物节抽VOLVO? V60的活动。</p>
 <figure id="13338377" aria-describedby="caption-13338377" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/10/id13338377-524621-450x300.jpeg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/10/id13338377-524621-450x300.jpeg" alt=" 市长与VOLVO 汽车徐铭丰经理(左)合照。" width="500" /></a><figcaption id="caption-13338377" class="wp-caption-text">市长与VOLVO 汽车徐铭丰经理(左)合照。（嘉义市政府提供）</figcaption></figure>
-<p>嘉义市长黄敏惠、旅馆公会理事长李素珍、VOLVO汽车经理徐铭丰、不动产开发商业同业公会理事长吕冠衡等众贵宾2021年10月29日于耐斯王子大饭店共同为<ahref="https://github.com/dfsljb317/djy/blob/master/gb/tag/%E8%B4%AD%E7%89%A9%E8%8A%82.md#1">购物节</a>揭开序幕。</p>
+<p>嘉义市长黄敏惠、旅馆公会理事长李素珍、VOLVO汽车经理徐铭丰、不动产开发商业同业公会理事长吕冠衡等众贵宾2021年10月29日于耐斯王子大饭店共同为<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B4%AD%E7%89%A9%E8%8A%82.md#1">购物节</a>揭开序幕。</p>
 <p>黄敏惠表示，为了鼓励大家来嘉义市观光消费，与旅宿业者共同携手做主人，延续去年“住宿送600嘉游金”的好康，由旅馆出经费嘉惠所有来嘉义市住宿的旅客，串联夜市、量贩店、观光工厂、百货公司等商家推出多项优惠方案。</p>
 <figure id="13338378" aria-describedby="caption-13338378" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/10/id13338378-524622-450x300.jpeg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/10/id13338378-524622-450x300.jpeg" alt="大合照。" width="500" /></a><figcaption id="caption-13338378" class="wp-caption-text">大合照。（嘉义市政府提供）</figcaption></figure>
 <p>将嘉义市打造成为购物游戏场，更协助业者数位转型，与露天拍卖平台合作，打造购物节线上专区，线上线下双管大力促进嘉义市消费及观光旅游效益，共同带动店家拼经济、抢商机。</p>
@@ -31,46 +31,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/29/n13338242.md#1">行善领会幸福  陈铭智获颁嘉义家扶扶幼委员</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/29/n13338206.md#1">嘉义市府关注化学物质管制   加强分级管理</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/29/n13338140.md#1">与作家有约：李昂“吃美食需要学习吗？”</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/29/n13338052.md#1">北兴街木屋失火 西区区公所前往关心慰问</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/29/n13336733.md#1">颜思齐开台四百年策展活动  导演魏德圣：找回开台历史根基</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/29/n13336676.md#1">加码刺激消费  屏东市普发500元消费券</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/28/n13336201.md#1">为嘉义青年建构地方返乡与留乡的扶持生态</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/28/n13335663.md#1">和平柔道馆影片首映会 见证陈戊寅精彩一生</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/28/n13335709.md#1">立委考察迎王、大鹏湾 盼整合地方特色观光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616208.md#1">文雅国小生态健行暨校本课程小艺人表演</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616274.md#1">嘉市特色好店家 助身障者享有知的权利</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616115.md#1">嘉义邮局举办捐血活动 邀民众捐血纾解血荒</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616121.md#1">虎尾建国眷村 景观环境及眷舍修缮工程动工</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616161.md#1">乐龄生活无限好 崙背乡老人会举办成果展</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615323.md#1">111学年度大学学测 国立嘉义高中成绩亮眼</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614031.md#1">屏东挖眼嫌 裁定续押居民松口气</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613827.md#1">和平与主权不应被侵犯 嘉县点灯声援乌克兰</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613686.md#1">嘉义市危老重建研习课程第二场次开跑</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613776.md#1">2022年嘉义家扶爱心园游会活动即日开跑</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/17/n10063990.md#1" target="_blank">苏智敏：血腥计生悲歌——帮凶  弃卒  泪水</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/16/n11118029.md#1" target="_blank">阿肯色州参议院通过决议案 制止中共强摘器官</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/30/n10263648.md#1" target="_blank">共产暴政录：迫害法轮功，毁坏道德</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/17/n11390870.md#1" target="_blank">胡平：20年烈火 法轮功屹立不倒成“真金”</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/22/n13323324.md#1">【未解之谜】神探李昌钰 前世竟是他</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/21/n13321059.md#1">【百年真相】刑场上的婚礼 是杜撰还是历史？</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/17/n13310077.md#1">【人生之钥】他选了风水吉地 为何最后还是大破大败？</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/21/n13320995.md#1">【未解之谜】托梦破奇案 震惊英国</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/24/n13325390.md#1">【舞蹈三剑客】我们是如何加入神韵的？</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/27/n13334355.md#1">【有冇搞错】首富算什么！中国有270个马斯克</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/27/n13334172.md#1">【探索时分】东风21D认祖归宗：美潘兴2导弹</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/28/n13336016.md#1">【马克时空】中俄军舰绕日示威 或助日本军费翻番</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/26/n13331932.md#1">【中国观察】政治局人事、接班人和战争危机</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/27/n13332244.md#1">高层不同调？刘鹤智囊发文批汪洋“灯论”</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/26/n13331894.md#1">美国医护为何宁可丢工作也不接种疫苗</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/26/n13331051.md#1">李云迪与江薄隐秘关联 嫖娼被捕不寻常</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/26/n13331670.md#1">为电影每天练琴8小时 梁朝伟从厌学到爱上钢琴</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/27/n13334361.md#1">袁咏仪与网红直播带货 滤镜下五官变形引热议</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/27/n13334544.md#1">遭传被视频制片人潜规则 彭小苒发声明驳斥</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/28/n13336623.md#1">于月仙遇难调查出炉 赵本山子弟相继出事</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/25/n13327239.md#1">高丽菜加它防动脉硬化！5种食物搭配营养加倍</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/26/n13331237.md#1">异位性皮肤炎发作抓不停？医师1招快速止痒</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/27/n13332712.md#1">新加工方法让木材像钢一样坚硬 却不会生锈</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/9/n13293015.md#1">血便原因大公开！1种排便小心大肠息肉、大肠癌</a></li>
-<li><a href="https://github.com/dfsljb317/djy/blob/master/gb/21/10/27/n13332488.md#1">海象登“海象级”潜艇睡觉 荷兰海军迎稀客</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945338.md#1">外国疫情已失控？小粉红煽动回国被恶搞</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/dfsljb317/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/dfsljb317/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/29/n13338374.htm">2021嘉市购物节11月1日盛妆在掌声中登场</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/29/n13338374.htm">2021嘉市购物节11月1日盛妆在掌声中登场</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/dfsljb317/djy/blob/master/gb/21/10/29/n13338374.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dfsljb317/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfsljb317/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dfsljb317/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dfsljb317/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dfsljb317/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfsljb317/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dfsljb317/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfsljb317/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dfsljb317/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfsljb317/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dfsljb317/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfsljb317/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dfsljb317/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfsljb317/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dfsljb317/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfsljb317/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dfsljb317/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfsljb317/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/dfsljb317/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfsljb317/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dfsljb317/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfsljb317/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dfsljb317/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfsljb317/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/dfsljb317/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfsljb317/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dfsljb317/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfsljb317/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dfsljb317/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfsljb317/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dfsljb317/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfsljb317/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dfsljb317/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfsljb317/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dfsljb317/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfsljb317/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dfsljb317/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfsljb317/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dfsljb317/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfsljb317/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dfsljb317/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfsljb317/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dfsljb317/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfsljb317/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dfsljb317/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfsljb317/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dfsljb317/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfsljb317/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/10/29/n13338374.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
